--- a/public/style.css
+++ b/public/style.css
@@ -1,115 +1,3 @@
-/* body{
-
-height:100%
-}
-td{
-border:2px solid #333;
-height:100px;
-width:100px;
-text-align:center;
-vertical-align:middle;
-font-size:70px;
-cursor:pointer;
-}
-
-table{
-border-collapse:collapse;
-position:absolute;
-left:50%;
-margin-left:-155px;
-top:200px;
-}
-
-table tr:first-child td{
-border-top:0;
-}
-
-table tr:last-child td{
-border-bottom:0;
-}
-
-table tr td:first-child{
-border-left:0;
-}
-
-table tr td:last-child{
-border-right:0;
-}
-
-.endgame{
-display:none;
-width:200px;
-top:120px;
-background-color:#ffffff;
-opacity:0.8;
-position:absolute;
-left:50%;
-margin-left:-100px;
-padding-top:50px;
-padding-bottom:50px;
-text-align:center;
-border-radius:5px;
-color:black;
-font-size:2em;
-}
-.row{
-display:none;
-}
-.row button{
-background-color:white;
-}
-
-#levelOne{
-background-color:red;
-}
-
-.chooseGame button{
-background-color:white;
-}
-
-.options{
-display:none;
-}
-#TTT_Board{
-display:none;
-}
-
-.clock_container{
-box-shadow:0 1px 4px rgba(0,0,0,0.5);
-padding:15px;
-border-radius:5px;
-display:none;
-background-color:orange;
-}
-
-.screen{
-color:black;
-border-radius:5px;
-}
-.screen span{
-display:inline-block;
-text-align:center;
-}
-
-input, .nameInput button{
-padding:7px;
-height:40px;
-}
-
-.nameInput{
-display:none;
-}
- */
- /*html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-
-  }*/
-
-
-
 
 html {
     box-sizing: border-box;
@@ -163,10 +51,10 @@ html {
       width: 400px;
       height: 400px;
   }
-  .cell{
+  /* .cell{
       height: 33.33%;
       width: 33.33%;
-  }
+  } */
   
   #TTT_Board{
   display:none;
@@ -278,7 +166,7 @@ html {
   }
   .endgame{
   display:none;
-  width:200px;
+  width:350px;
   background-color:white;
   opacity:0.8;
   
