cheanged cell colour

--- a/public/style.css
+++ b/public/style.css
@@ -81,6 +81,7 @@ html {
   border:5px solid black;
   height:100px;
   width:100px;
+  color:brown;
   text-align:center;
   vertical-align:middle;
   font-size:50px;
