--- a/public/style.css
+++ b/public/style.css
@@ -615,7 +615,7 @@ body, html {
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
-    position: relative;
+     position: relative; 
     display: inline-block;
   }
   
@@ -645,6 +645,7 @@ body, html {
 
 #countdown,#ss,#plural{
     color:white;
+    display: none;
 }
   
   
