--- a/style.css
+++ b/style.css
@@ -1,625 +1,180 @@
-@import url('https://fonts.googleapis.com/css?family=Red+Hat+Display:400,900&display=swap');
-html {
-    box-sizing: border-box;
-  
+//replace the code from .center to part before spinwheel
+
+.displayleaderboard{
+      display: none;
   }
-  body{
-      background-color: #eaeaea;
-      position: relative;
-      background-image:  url('/bg1.png');
-      /* &:before{
-          position: absolute;
-      } */
-  }
-  *{
-    box-sizing: border-box;
+  .leaderboard {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    width: 285px;
+    height: 308px;
+    background: -webkit-linear-gradient(top, #3a404d, #181c26);
+    background: linear-gradient(to bottom, #3a404d, #181c26);
     border-radius: 10px;
-    /*box-shadow:0 1px 4px rgba(0,0,0,0.5);*/
+    box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
   }
-  body, html{
-  height:100%;
+  .leaderboard h1 {
+    font-size: 18px;
+    color: #e1e1e1;
+    padding: 12px 13px 18px;
   }
-  #container{
-      width: 100%;
-      max-width: 640px;
-        min-width: 360px;
-        margin: 50px auto;
-      padding: 20px;
-      background-color:black;
-      opacity: 0.8;
-      box-shadow: 0 1px 10px rgba(0,0,0,50);
-  }
-  
-  @media (max-width: 1400px) {
-    #container {
-      max-width: 500px;
-      margin: 20px auto;
-    }
-  }
-  
-  @media (max-width: 575px) {
-    #container {
-      margin-top: 0px;
-    }
-  }
-  
-  .giph{
-      text-align: center;
-  
-  }
-  img {
-  
-      margin-top: 5%; 
-      width: 400px;
-      height: 400px;
-  }
-  /* .cell{
-      height: 33.33%;
-      width: 33.33%;
-  } */
-  
-  #TTT_Board{
-  display:none;
-  }
-  
-  #board{
-      position: relative;
-      margin: auto 25% auto;
-  
-      text-align: center;
-  
-  }
-  
-  
-  
-  table{
-  border-collapse:collapse;
-  margin: auto;
-  
-  }
-  td{
-  border:5px solid black;
-  height:100px;
-  width:100px;
-  text-align:center;
-  vertical-align:middle;
-  font-size:50px;
-  cursor:pointer;
-  }
-  td:hover{
-      background-color: grey;
-  }
-  
-  
-  table tr:first-child td{
-  border-top:0;
-  }
-  
-  table tr:last-child td{
-  border-bottom:0;
-  }
-  
-  table tr td:first-child{
-  border-left:0;
-  }
-  
-  table tr td:last-child{
-  border-right:0;
-  }
-  .card_container {
-      width: 100px;
-      height: 100px;
-      position: relative;
-      border: 5px solid black;
-      -webkit-perspective: 800px;
-      -moz-perspective: 800px;
-      -o-perspective: 800px;
-      perspective: 800px;
-  }
-  .card {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      -webkit-transition: -webkit-transform 1s;
-      -moz-transition: -moz-transform 1s;
-      -o-transition: -o-transform 1s;
-      transition: transform 1s;
-      -webkit-transform-style: preserve-3d;
-      -moz-transform-style: preserve-3d;
-      -o-transform-style: preserve-3d;
-      transform-style: preserve-3d;
-      -webkit-transform-origin: 50% 50%;
-  }
-  .card div {
-      display: block;
-      height: 100%;
-      width: 100%;
-      line-height: 100px;
-      color: white;
-      text-align: center;
-      font-weight: bold;
-      font-size: 70px;
-      position: absolute;
-      -webkit-backface-visibility: hidden;
-      -moz-backface-visibility: hidden;
-      -o-backface-visibility: hidden;
-      backface-visibility: hidden;
-  }
-  
-  
-  .card .front {
-    background: white;
-  }
-  .card .back {
-      -webkit-transform: rotateY( 180deg );
-      -moz-transform: rotateY( 180deg );
-      -o-transform: rotateY( 180deg );
-      transform: rotateY( 180deg );
-  }
-  .card.flipped {
-      -webkit-transform: rotateY( 180deg );
-      -moz-transform: rotateY( 180deg );
-      -o-transform: rotateY( 180deg );
-      transform: rotateY( 180deg );
-  }
-  
-  #side{
-      text-align: center;
-  }
-  .endgame{
-  display:none;
-  width:350px;
-  background-color:white;
-  opacity:0.8;
-/*   
-  
-  position:absolute; */
-  /*left:50%;*/
-  margin: auto;
-  padding-top:50px;
-  padding-bottom:50px;
-  text-align:center;
-  border-radius:5px;
-  color:black;
-  font-size:2em;
-  }
-  .row1{
-  display:none;
-  width: 100%;
-  text-align: center;
-  }
-  .row1 {
-  background-color:transparent;
-  }
-  .row1 input:hover{
-  background-color: #5868ad;
-  }
-  #levelOne{
-  background-color:red;
-  }
-  .chooseGame{
-      overflow: auto;
-      text-align: center;
-  
-  }
-  .chooseGame button{
-  background-color:#0c2c5e ;
-  margin: 10px 20px;
-  width: 200px;
-  color: #bac8de;
-  font-size: 15px;
-  vertical-align: center;
-  border: none;
-      margin: auto;
-      padding: 10px;
-      cursor: pointer;
-  
-  }
-
-  
-  .options{
-  display:none;
-  margin: auto;}
-  
-  .options button{
-  background-color:#3b134d ;
-  color: #e2dae6;
-  font-size: 15px;
-  align-content: center;
-  border: none;
-  }
-  .options button:hover{
-      background-color: #724287;
-  }
-  
-  .clock_container{
-  /*box-shadow:0 1px 4px rgba(0,0,0,0.5);
-  padding:15px;
-  border-radius:5px;*/
-  display:none;/*
-  background-color:orange;*/
-  }
-  
-  .screen{
-      text-align: left;
-  color:white;
-  font-size: 15px;
-  }
-  .screen span{
-  display:inline-block;
-  text-align:center;
-  }
-  span{
-      text-align: left;
-  }
-  
-  .nameInput{
-  display:none;
-  text-align: center;
-  }
-  
-  h1{
-      color: white;
-  }
-  .nameInput input{
-      border: none;
-      border-radius: 0%;
-      padding: 10px;
-      font-size: 15px;
-      margin: 10px;
-  }
-  .nameInput button{
-  /*padding:7px;
-  height:40px;*/
-  background-color:#3b134d ;
-  margin: 10px 20px;
-  color: #e2dae6;
-  font-size: 15px;
-  align-content: center;
-  
-  border: none;
-      margin: auto;
-      padding: 10px;
-      cursor: pointer;
-  
-  /*margin: 10px 20px;
-  width: 200px;
-  color: #bac8de;
-  font-size: 15px;
-  vertical-align: center;*/
-  }
-  .nameInput button:hover{
-      background-color: #724287;
-  }
-.leaderBoard {
-    display: none;
-}
-
-/*  
-
-body, html {
-	height: 100%;
-	width: 100%;
-	overflow: hidden;
-	background: #4B4168;
-	color: #333;
-} */
-
-.center {
-    display: none;
-	position: relative;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	
-	z-index: 10;
-	font-family: 'Red Hat Display', sans-serif;
-}
-
-.top3 {
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
-	color: #4B4168;
-}
-	.top3 item {
-		box-sizing: border-box;
-		position: relative;
-		background: white;
-		width: 9rem;
-		height: 10rem;
-		text-align: center;
-		padding: 2.8rem 0 0 ;
-		margin: 1rem 1rem 2rem;
-		border-radius: 0.5rem;
-		transform-origin: bottom;
-		cursor: pointer;
-		transition: transform 200ms ease-in-out;
-        box-shadow:0 0 4rem 0 rgba(black, 0.1),0 1rem 2rem -1rem rgba(black, 0.3);
-    }
-		.pos_1,.pos_2,.pos_3 {
-			font-weight: 900;
-			font-size: 1.5rem;
-			margin-bottom: 0.5rem;
-		}
-		
-		.top3 name {
-			font-size: 1.1rem;
-			margin-bottom: 0.5rem;
-		}
-		
-		.point {
-			opacity: 0.5;
-				display: block;
-				content: 'points';
-				opacity: 0.5;
-			}
-		
-		
-		.top3 item one {
-			width: 10rem;
-			height: 11rem;
-			padding-top: 3.5rem;
-			
-			
-		}
-		
-		.top3 item:hover {
-			transform: scale(1.05);
-		}
-	}
-}
-
-.list {
-	padding-left: 2rem;
-	margin: 0 auto;
-}	
-	.list item {
-		position: relative;
-		display: flex;
-		align-items: center;
-		background: white;
-		height: 3rem;
-		border-radius: 4rem;
-		margin-bottom: 2rem;
-		background: #EAA786;
-		transform-origin: left;
-		cursor: pointer;
-		transition: transform 200ms ease-in-out;
-		box-shadow:
-			0 0 4rem 0 rgba(black, 0.1),
-			0 1rem 2rem -1rem rgba(black, 0.3);
-    }
-		.pos1,.pos2,.pos3,.pos4,.pos5 {
-			font-weight: 900;
-			position: absolute;
-			left: -2rem;
-			text-align: center;
-			font-size: 1.25rem;
-			width: 1.5rem;
-			color: white;
-			opacity: 0.6;
-			transition: opacity 200ms ease-in-out;
-		}
-		
-		.list item name {
-			flex-grow: 2;
-			flex-basis: 10rem;
-			font-size: 1.1rem;
-		}
-		
-		.score {
-			margin-right: 1.5rem;
-			opacity: 0.5;
-				margin-right: 1rem;
-				content: 'points';
-				opacity: 0.5;
-			
-		}
-		
-		.list item:hover {
-			transform: scale(1.05);
-        }
-			.pos{
-				opacity: 0.8;
-			}
-/* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
+  .leaderboard h1 svg {
+    width: 25px;
+    height: 26px;
     position: relative;
-    display: inline-block;
+    top: 3px;
+    margin-right: 6px;
+    vertical-align: baseline;
   }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  .leaderboard ol {
+    counter-reset: leaderboard;
+  }
+  .leaderboard ol li {
+    position: relative;
     z-index: 1;
+    font-size: 14px;
+    counter-increment: leaderboard;
+    padding: 18px 10px 18px 50px;
+    cursor: pointer;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1, 1);
+            transform: translateZ(0) scale(1, 1);
   }
-  
-  /* Links inside the dropdown */
-  .dropdown-content button {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content button:hover {background-color: #ddd}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
-
-#countdown,#ss,#plural{
-    color:white;
-}
-
-
-  #SpinCircle{
-    box-sizing: border-box;
-    border-radius: 0%;
-    padding: 0;
-    margin: 0;
-    outline: none;
-    display: none;
-justify-content:center;
-align-items: center;
-height: 100vh;
-overflow: hidden;
-background-image: url('/bg1.png');
-background-size: cover;
-}
-
-.mainCircle{
-    position: relative;
-    display: block;
-    width:500px;
-    height: 500px;
-}
-.mainCircle:after{
+  .leaderboard ol li::before {
+    content: counter(leaderboard);
     position: absolute;
-    content:'';
-    width:32px;
-    height:32px;
-    background:url('/arrow1.png') no-repeat;
-    background-size: 32px;
-    right:-30px;
-    top:50%;
-    transform:translate(-50%);
-
-}
-.box{
-    width:100%;
-    height:100%;
-    position:relative;
-    border-radius:50%;
-    border:10px solid #FFF;
-    overflow: hidden;
-    transition:all ease 5s;
-}
-#SpinCircle span{
-    width: 50%;
-    height: 50%;
-    display: inline-block;
-    position: absolute;
-}
-.span1{
-    clip-path: polygon(0 92%, 100% 50%,0 8%);
-    background-color: #C51162;
-    top:120px;
-    left:0;
-}
-.span2{
-    clip-path: polygon(100% 92%, 0 50%,100% 8%);
-    background-color: #FF9100;
-    top:120px;
-    right:0;
-}
-.span3{
-    clip-path: polygon(50% 0%, 8% 100%,92% 100%);
-    background-color: #F50057;
-    bottom:0px;
-    left:120px;
-}
-.span4{
-    clip-path: polygon(50% 100%, 92% 0%,8% 0);
-    background-color: #880E4F;
-    top:0px;
-    left:120px;
-}
-.circle2{
-    width:100%;
-    height:100%;
-    transform:rotate(-135deg);
-}
-span b{
-    width: 65px;
-    height: 65px;
-    line-height: 65px;
-    border-radius: 50%;
-    font-size: 26px;
+    z-index: 2;
+    top: 15px;
+    left: 15px;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    color: #c24448;
+    background: #fff;
+    border-radius: 20px;
     text-align: center;
-    background-color: #FFF;
+  }
+  .leaderboard ol li mark {
     position: absolute;
-     top:50%;
-     left:50%;
-     transform: translate(-50%,-50%);
-     box-shadow:inset 0 3px 3px 0 #717171;
-         }
-         .spin{
-             position:absolute;
-             top:50%;
-             left:50%;
-             transform:translate(-50%, -50%);
-             width:75px;
-             height: 75px;
-             border-radius: 50%;
-             border: 4px solid #fff;
-             background-color: #ff5722;
-             color:#fff;
-             box-shadow: 0 5px 20px #000;
-             font-weight: bold;
-             font-size: 22px;
-             cursor:pointer;
-         }
-         .spin:active{
-              width:70px;
-              height:70px;
-              font-size:20px;
-         }
-         .mainCircle.animate:after{
-          animation: animateArrow 0.7s ease infinite;   
-         }
-         @keyframes animateArrow {
-            50%{
-            right: -40px;
-            }
-         }
-         #status{
-            font-size: 2em;
-            color: white;
-             display: block;
-position: absolute;
-top: 650px;
-         }
-         #goBack{
-            color: whitesmoke;
-             display: none;
-            position: absolute;
-            top: 700px;
-          border: whitesmoke;
-         }
-         #goBack:hover{
-background-color: #880E4F;
-         }
-         .spin:focus {
-outline: none;
-box-shadow: none;
-}
-.spin:active:focus {
-outline: none;
-box-shadow: none;
-}
-#goBack:focus {
-outline: none;
-box-shadow: none;
-}  
-  
-  
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 18px 10px 18px 50px;
+    margin: 0;
+    background: none;
+    color: #fff;
+  }
+  .leaderboard ol li mark::before, .leaderboard ol li mark::after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    bottom: -11px;
+    left: -9px;
+    border-top: 10px solid #c24448;
+    border-left: 10px solid transparent;
+    -webkit-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+    opacity: 0;
+  }
+  .leaderboard ol li mark::after {
+    left: auto;
+    right: -9px;
+    border-left: none;
+    border-right: 10px solid transparent;
+  }
+  .leaderboard ol li small {
+    position: relative;
+    z-index: 2;
+    display: block;
+    text-align: right;
+  }
+  .leaderboard ol li::after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fa6855;
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.08);
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    opacity: 0;
+  }
+  .leaderboard ol li:nth-child(1) {
+    background: #fa6855;
+  }
+  .leaderboard ol li:nth-child(1)::after {
+    background: #fa6855;
+  }
+  .leaderboard ol li:nth-child(2) {
+    background: #e0574f;
+  }
+  .leaderboard ol li:nth-child(2)::after {
+    background: #e0574f;
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08);
+  }
+  .leaderboard ol li:nth-child(2) mark::before, .leaderboard ol li:nth-child(2) mark::after {
+    border-top: 6px solid #ba4741;
+    bottom: -7px;
+  }
+  .leaderboard ol li:nth-child(3) {
+    background: #d7514d;
+  }
+  .leaderboard ol li:nth-child(3)::after {
+    background: #d7514d;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.11);
+  }
+  .leaderboard ol li:nth-child(3) mark::before, .leaderboard ol li:nth-child(3) mark::after {
+    border-top: 2px solid #b0433f;
+    bottom: -3px;
+  }
+  .leaderboard ol li:nth-child(4) {
+    background: #cd4b4b;
+  }
+  .leaderboard ol li:nth-child(4)::after {
+    background: #cd4b4b;
+    box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15);
+  }
+  .leaderboard ol li:nth-child(4) mark::before, .leaderboard ol li:nth-child(4) mark::after {
+    top: -7px;
+    bottom: auto;
+    border-top: none;
+    border-bottom: 6px solid #a63d3d;
+  }
+  .leaderboard ol li:nth-child(5) {
+    background: #c24448;
+    border-radius: 0 0 10px 10px;
+  }
+  .leaderboard ol li:nth-child(5)::after {
+    background: #c24448;
+    box-shadow: 0 -2.5px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 0 0 10px 10px;
+  }
+  .leaderboard ol li:nth-child(5) mark::before, .leaderboard ol li:nth-child(5) mark::after {
+    top: -9px;
+    bottom: auto;
+    border-top: none;
+    border-bottom: 8px solid #993639;
+  }
+  .leaderboard ol li:hover {
+    z-index: 2;
+    overflow: visible;
+  }
+  .leaderboard ol li:hover::after {
+    opacity: 1;
+    -webkit-transform: scaleX(1.06) scaleY(1.03);
+            transform: scaleX(1.06) scaleY(1.03);
+  }
+  .leaderboard ol li:hover mark::before, .leaderboard ol li:hover mark::after {
+    opacity: 1;
+    -webkit-transition: all .35s ease-in-out;
+    transition: all .35s ease-in-out;
+  }
