changed colour of leaderboard button

--- a/public/style.css
+++ b/public/style.css
@@ -240,14 +240,14 @@ width:350px;
   display:none;
   margin: auto;}
   
-  .options button{
+  .options button,.leaderBoard{
   background-color:#3b134d ;
   color: #e2dae6;
   font-size: 15px;
   align-content: center;
   border: none;
   }
-  .options button:hover{
+  .options button,.leaderBoard:hover{
       background-color: #724287;
   }
   
@@ -471,134 +471,184 @@ box-shadow: none;
 .leaderBoard {
 display: none;
 }
-
-/*  
-
-body, html {
-	height: 100%;
-	width: 100%;
-	overflow: hidden;
-	background: #4B4168;
-	color: #333;
-} */
-
-.center {
+.displayleaderboard{
     display: none;
-	position: relative;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	
-	z-index: 10;
-	font-family: 'Red Hat Display', sans-serif;
 }
-
-.top3 {
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
-	color: #4B4168;
+.leaderboard {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 285px;
+  height: 308px;
+  background: -webkit-linear-gradient(top, #3a404d, #181c26);
+  background: linear-gradient(to bottom, #3a404d, #181c26);
+  border-radius: 10px;
+  box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
 }
-	.top3 item {
-		box-sizing: border-box;
-		position: relative;
-		background: white;
-		width: 9rem;
-		height: 10rem;
-		text-align: center;
-		padding: 2.8rem 0 0 ;
-		margin: 1rem 1rem 2rem;
-		border-radius: 0.5rem;
-		transform-origin: bottom;
-		cursor: pointer;
-		transition: transform 200ms ease-in-out;
-        box-shadow:0 0 4rem 0 rgba(black, 0.1),0 1rem 2rem -1rem rgba(black, 0.3);
-    }
-		.pos_1,.pos_2,.pos_3 {
-			font-weight: 900;
-			font-size: 1.5rem;
-			margin-bottom: 0.5rem;
-		}
-		
-		.top3 name {
-			font-size: 1.1rem;
-			margin-bottom: 0.5rem;
-		}
-		
-		.point {
-			opacity: 0.5;
-				display: block;
-				content: 'points';
-				opacity: 0.5;
-			}
-		
-		
-		.top3 item one {
-			width: 10rem;
-			height: 11rem;
-			padding-top: 3.5rem;
-			
-			
-		}
-		
-		.top3 item:hover {
-			transform: scale(1.05);
-		}
-	/* }
-} */
-
-.list {
-	padding-left: 2rem;
-	margin: 0 auto;
-}	
-	.list item {
-		position: relative;
-		display: flex;
-		align-items: center;
-		background: white;
-		height: 3rem;
-		border-radius: 4rem;
-		margin-bottom: 2rem;
-		background: #EAA786;
-		transform-origin: left;
-		cursor: pointer;
-		transition: transform 200ms ease-in-out;
-		box-shadow:
-			0 0 4rem 0 rgba(black, 0.1),
-			0 1rem 2rem -1rem rgba(black, 0.3);
-    }
-		.pos1,.pos2,.pos3,.pos4,.pos5 {
-			font-weight: 900;
-			position: absolute;
-			left: -2rem;
-			text-align: center;
-			font-size: 1.25rem;
-			width: 1.5rem;
-			color: white;
-			opacity: 0.6;
-			transition: opacity 200ms ease-in-out;
-		}
-		
-		.list item name {
-			flex-grow: 2;
-			flex-basis: 10rem;
-			font-size: 1.1rem;
-		}
-		
-		.score {
-			margin-right: 1.5rem;
-			opacity: 0.5;
-				margin-right: 1rem;
-				content: 'points';
-				opacity: 0.5;
-			
-		}
-		
-		.list item:hover {
-			transform: scale(1.05);
-        }
-			.pos{
-				opacity: 0.8;
-			}
+.leaderboard h1 {
+  font-size: 18px;
+  color: #e1e1e1;
+  padding: 12px 13px 18px;
+}
+.leaderboard h1 svg {
+  width: 25px;
+  height: 26px;
+  position: relative;
+  top: 3px;
+  margin-right: 6px;
+  vertical-align: baseline;
+}
+.leaderboard ol {
+  counter-reset: leaderboard;
+}
+.leaderboard ol li {
+  position: relative;
+  z-index: 1;
+  font-size: 14px;
+  counter-increment: leaderboard;
+  padding: 18px 10px 18px 50px;
+  cursor: pointer;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1, 1);
+          transform: translateZ(0) scale(1, 1);
+}
+.leaderboard ol li::before {
+  content: counter(leaderboard);
+  position: absolute;
+  z-index: 2;
+  top: 15px;
+  left: 15px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  color: #c24448;
+  background: #fff;
+  border-radius: 20px;
+  text-align: center;
+}
+.leaderboard ol li mark {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 18px 10px 18px 50px;
+  margin: 0;
+  background: none;
+  color: #fff;
+}
+.leaderboard ol li mark::before, .leaderboard ol li mark::after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  bottom: -11px;
+  left: -9px;
+  border-top: 10px solid #c24448;
+  border-left: 10px solid transparent;
+  -webkit-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
+  opacity: 0;
+}
+.leaderboard ol li mark::after {
+  left: auto;
+  right: -9px;
+  border-left: none;
+  border-right: 10px solid transparent;
+}
+.leaderboard ol li small {
+  position: relative;
+  z-index: 2;
+  display: block;
+  text-align: right;
+}
+.leaderboard ol li::after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fa6855;
+  box-shadow: 0 3px 0 rgba(0, 0, 0, 0.08);
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  opacity: 0;
+}
+.leaderboard ol li:nth-child(1) {
+  background: #fa6855;
+}
+.leaderboard ol li:nth-child(1)::after {
+  background: #fa6855;
+}
+.leaderboard ol li:nth-child(2) {
+  background: #e0574f;
+}
+.leaderboard ol li:nth-child(2)::after {
+  background: #e0574f;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08);
+}
+.leaderboard ol li:nth-child(2) mark::before, .leaderboard ol li:nth-child(2) mark::after {
+  border-top: 6px solid #ba4741;
+  bottom: -7px;
+}
+.leaderboard ol li:nth-child(3) {
+  background: #d7514d;
+}
+.leaderboard ol li:nth-child(3)::after {
+  background: #d7514d;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.11);
+}
+.leaderboard ol li:nth-child(3) mark::before, .leaderboard ol li:nth-child(3) mark::after {
+  border-top: 2px solid #b0433f;
+  bottom: -3px;
+}
+.leaderboard ol li:nth-child(4) {
+  background: #cd4b4b;
+}
+.leaderboard ol li:nth-child(4)::after {
+  background: #cd4b4b;
+  box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15);
+}
+.leaderboard ol li:nth-child(4) mark::before, .leaderboard ol li:nth-child(4) mark::after {
+  top: -7px;
+  bottom: auto;
+  border-top: none;
+  border-bottom: 6px solid #a63d3d;
+}
+.leaderboard ol li:nth-child(5) {
+  background: #c24448;
+  border-radius: 0 0 10px 10px;
+}
+.leaderboard ol li:nth-child(5)::after {
+  background: #c24448;
+  box-shadow: 0 -2.5px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 0 0 10px 10px;
+}
+.leaderboard ol li:nth-child(5) mark::before, .leaderboard ol li:nth-child(5) mark::after {
+  top: -9px;
+  bottom: auto;
+  border-top: none;
+  border-bottom: 8px solid #993639;
+}
+.leaderboard ol li:hover {
+  z-index: 2;
+  overflow: visible;
+}
+.leaderboard ol li:hover::after {
+  opacity: 1;
+  -webkit-transform: scaleX(1.06) scaleY(1.03);
+          transform: scaleX(1.06) scaleY(1.03);
+}
+.leaderboard ol li:hover mark::before, .leaderboard ol li:hover mark::after {
+  opacity: 1;
+  -webkit-transition: all .35s ease-in-out;
+  transition: all .35s ease-in-out;
+}
 /* Dropdown Button */
 .dropbtn {
     background-color: #3498DB;
