--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,10 @@
       opacity: 0.8;
       box-shadow: 0 1px 10px rgba(0,0,0,50);
   }
-  
+  .soundOption{
+    position: absolute;
+    text-align: center;
+  }
   @media (max-width: 1400px) {
     #container {
       max-width: 500px;
@@ -53,7 +56,8 @@
     }
     #board{
         position: relative;
-       margin: auto 25% auto;  
+      /* margin: auto 20% auto; */
+        align-content: center;
         text-align: center;
         
     }
@@ -62,9 +66,10 @@
     border-collapse:collapse; 
     margin: auto; 
     table-layout: fixed;
-    width:450px; 
+    width:300px;
+    text-align: center; 
     }
-  @media (max-width: 575px) {
+  @media (max-width: 575px) { 
     #container {
       margin-top: 0px;
     }
@@ -187,20 +192,24 @@ width:350px;
   }
   .endgame{
   display:none;
-  width:350px;
-  background-color:white;
-  opacity:0.8;
-  
-  
+  opacity: 0.8;
   position:absolute;
-  /*left:50%;*/
-  margin: auto 20% auto;
-  padding-top:50px;
-  padding-bottom:50px;
   text-align:center;
   border-radius:5px;
-  color:black;
-  font-size:2em;
+  color:white;
+
+  font-size:15px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 150px;
+  height: 150px;
+  background: -webkit-linear-gradient(top, #4d3a3d, #3f1a1d);
+  background: linear-gradient(to bottom, #4d3a3d, #3f1a1d);
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
   }
   .row1{
   display:none;
@@ -216,11 +225,17 @@ width:350px;
   #levelOne{
   background-color:red;
   }
+  .soundOption{
+    margin: auto;
+  }
   .chooseGame{
       overflow: auto;
       text-align: center;
   
   }
+  /* #soundOption{
+    text-align: center;
+  } */
   .chooseGame button{
   background-color:#0c2c5e ;
   margin: 10px 20px;
@@ -234,23 +249,49 @@ width:350px;
       cursor: pointer;
   
   }
-
+.chooseGame button:hover{
+  background-color: #2980B9;
+}
   
   .options{
   display:none;
   margin: auto;}
-  
+  /* #hint{
+    text-align: right;
+  } 
+  .leaderBoard{
+    text-align: center;
+  } */
+  #spinButton,#toreplay{
+    position: relative;
+    background-color:#a02f1c ;
+    color: #dfdcd3;
+    font-size: 15px;
+    align-content: center;
+    text-align: center;
+    border: none;
+    margin:auto;
+    width: 100px;
+    }
+    #toreplay{
+      margin-top:5px;
+    }
+    #spinButton:hover,#toreplay:hover{
+      background-color:#bd3a29;
+    }
+
   .options button,.leaderBoard{
   background-color:#3b134d ;
   color: #e2dae6;
   font-size: 15px;
   align-content: center;
   border: none;
+  width: 100px;
   }
-  .options button,.leaderBoard:hover{
+  .options button:hover,.leaderBoard:hover{
       background-color: #724287;
   }
-  
+
   .clock_container{
   /*box-shadow:0 1px 4px rgba(0,0,0,0.5);
   padding:15px;
@@ -260,7 +301,8 @@ width:350px;
   }
   
   .screen{
-      text-align: right;
+    padding-left: 10px;;
+      text-align: left;
   color:white;
   font-size: 15px;
   }
@@ -481,17 +523,66 @@ display: none;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: 285px;
-  height: 308px;
+  height: 380px;
   background: -webkit-linear-gradient(top, #3a404d, #181c26);
   background: linear-gradient(to bottom, #3a404d, #181c26);
   border-radius: 10px;
   box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
+}
+i{
+width: 100px;
+height: 100px;
+position: relative;
+top: 3px;
+margin-right: 6px;
+vertical-align: baseline;
+float: left;
 }
 .leaderboard h1 {
   font-size: 18px;
   color: #e1e1e1;
   padding: 12px 13px 18px;
 }
+
+.gg-trophy {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  transform: scale(var(--ggs,1));
+  width: 100px;
+  height: 100px;
+  border: 2px solid;
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  color: orangered;
+
+ }
+ 
+ .gg-trophy::after,.gg-trophy::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute
+ }
+ 
+ .gg-trophy::before {
+  box-shadow: inset 0 0 0 2px,0 2px 0 0;
+  bottom: -4px;
+  width: 6px;
+  height: 4px;
+  border-left: 2px solid transparent;
+  border-right: 2px solid transparent;
+  left: 0
+ }
+ 
+ .gg-trophy::after {
+  width: 16px;
+  height: 6px;
+  border-left: 2px solid;
+  border-right: 2px solid;
+  left: -5px;
+  top: 0
+ } 
 .leaderboard h1 svg {
   width: 25px;
   height: 26px;
@@ -500,8 +591,11 @@ display: none;
   margin-right: 6px;
   vertical-align: baseline;
 }
+
 .leaderboard ol {
   counter-reset: leaderboard;
+  padding-inline-start: 0px;
+  
 }
 .leaderboard ol li {
   position: relative;
@@ -515,12 +609,32 @@ display: none;
   -webkit-transform: translateZ(0) scale(1, 1);
           transform: translateZ(0) scale(1, 1);
 }
+.leaderboard ol .pos7 mark{
+  counter-reset: none;
+  padding: 18px 10px 18px 50px;
+}
+.rank{
+  position: absolute;
+  color: #c24448;
+  background: #fff;
+  border-radius: 20px;
+  z-index: 2;
+  top: 15px;
+ left: 15px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+}
+.leaderboard ol .pos7::before{
+  content: none;
+}
 .leaderboard ol li::before {
   content: counter(leaderboard);
   position: absolute;
   z-index: 2;
   top: 15px;
-  left: 15px;
+ left: 15px;
   width: 20px;
   height: 20px;
   line-height: 20px;
@@ -529,6 +643,7 @@ display: none;
   border-radius: 20px;
   text-align: center;
 }
+
 .leaderboard ol li mark {
   position: absolute;
   z-index: 2;
@@ -553,18 +668,29 @@ display: none;
   transition: all .1s ease-in-out;
   opacity: 0;
 }
+/* .leaderboard ol li small{
+  display: inline;
+} */
 .leaderboard ol li mark::after {
   left: auto;
   right: -9px;
   border-left: none;
   border-right: 10px solid transparent;
 }
-.leaderboard ol li small {
+
+.leaderboard ol li small .point{
   position: relative;
   z-index: 2;
   display: block;
-  text-align: right;
+  text-indent: 30%;
 }
+.leaderboard ol li small .score{
+  position: relative;
+  z-index: 2;
+  display: block;
+  text-align: right; 
+}
+
 .leaderboard ol li::after {
   content: '';
   position: absolute;
@@ -622,12 +748,12 @@ display: none;
 }
 .leaderboard ol li:nth-child(5) {
   background: #c24448;
-  border-radius: 0 0 10px 10px;
+  /* border-radius: 0 0 10px 10px; */
 }
 .leaderboard ol li:nth-child(5)::after {
   background: #c24448;
   box-shadow: 0 -2.5px 0 rgba(0, 0, 0, 0.12);
-  border-radius: 0 0 10px 10px;
+  /* border-radius: 0 0 10px 10px; */
 }
 .leaderboard ol li:nth-child(5) mark::before, .leaderboard ol li:nth-child(5) mark::after {
   top: -9px;
@@ -635,6 +761,23 @@ display: none;
   border-top: none;
   border-bottom: 8px solid #993639;
 }
+
+.leaderboard ol li:nth-child(6) {
+  background: #993639;
+  border-radius: 0 0 10px 10px;
+}
+.leaderboard ol li:nth-child(6)::after {
+  background: #993639;
+  box-shadow: 0 -2.5px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 0 0 10px 10px;
+}
+.leaderboard ol li:nth-child(6) mark::before, .leaderboard ol li:nth-child(6) mark::after {
+  top: -9px;
+  bottom: auto;
+  border-top: none;
+  border-bottom: 8px solid #631b1d;
+}
+
 .leaderboard ol li:hover {
   z-index: 2;
   overflow: visible;
