--- a/public/style.css
+++ b/public/style.css
@@ -44,7 +44,9 @@
       margin: 20px auto;
     }
   }
-
+  body.keyboard {
+    height: calc(100% + 500px); 
+}
   td{
     border:5px solid black;
     height:100px;
